# livraria-back

./: .gitignore  .pdm-python  README.md  db.sqlite3  pyproject.toml  requirements.txt
config/: settings.py  urls.py
livraria/: admin.py  models.py  serializers.py  views.py
livraria/migrations/: 0001_initial.py  0002_autor_editora_livro.py  0002_livro_capa.py  0003_compra.py  0003_livro_autores.py  0004_itenscompra.py
livraria/models/: autor.py  categoria.py  compra.py  editora.py  livro.py
livraria/serializers/: __init__.py  compra.py  editora.py  livro.py
livraria/views/: autor.py  categoria.py  compra.py  editora.py  livro.py
uploader/migrations/: 0001_initial.py
usuario/migrations/: 0001_initial.py
